# axum-lambda-template

./: Cargo.toml  README.md
src/: lib.rs
tests/: hello.rs
